@@ -1,3 +1,10 @@
+2009-10-01  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>
+
+	Watch exec'd (not dbus activated) children and deal with their deaths.
+	Fixes: NB#141211
+
+	* src/launcher/hd-app-mgr.c:
+
 2009-10-01  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Fixes: NB#140681 - Title bar of the call UI disappears while closing 
